--- a/index.html
+++ b/index.html
@@ -435,6 +435,16 @@ sudo systemctl start docker</code></pre>
 					...
 				</section>
 			</section>
+			<section>
+				<section>
+					<h2>Ressourcen</h2>
+				</section>
+				<section>
+					
+					https://developer.amazon.com/de/docs/custom-skills/request-and-response-json-reference.html
+
+				</section>
+			</section>
 
 
 		</div>
