--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@ services:
 			<section>
 				<section>
 					<h2>Serverless Computing mit OPENFASS</h2>
-					<h3>Grundlagen und Archtektur</h3>
+					<h3>Grundlagen und Architektur</h3>
 					<img src="images/openfaas_logo.png" style="border:0px"/>
 				</section>
 				<section>
@@ -669,18 +669,17 @@ services:
 						<li>Framework für Serverless Functions</li>
 						<li>Open source <a href="https://github.com/openfaas/faas" target="_blank">GitHub</a></li>
 						<li>Integriertes Portal (UI) für Deployment / Test</li>
-						<li>Ausführung auf Docker Swarm oder Kubernates</li>
+						<li>Ausführung auf Docker Swarm oder Kubernetes</li>
 						<li>Skalierbar</li>
 						<li>Verwendung diverser Programmiersprachen GO, node.js, .NET ...</li>
 					</ul><br /><br />
 					Die Funktionen erhalten die Anfragen per HTTP POST und Port 8080.
 				</section>
 				<section>
-
+					<h3>Architektur</h3>
+					<img src="images/openfaas.svg" style="border:0px;width:1000px"/>
 				</section>
 				<section>
-						
-						<br />
 						<h4>Function Watchdog</h4>
 						<ul>
 							<li>kleiner HTTP-Server</li>
@@ -720,7 +719,19 @@ services:
 					<h3>Funktionen für Amazon Alexa</h3>
 				</section>
 				<section>
-						https://developer.amazon.com/de/
+						<h3>Architektur</h3>
+						<img src="images/alexa.svg" style="border:0px;width:1000px"/>
+					</section>
+				<section>
+					<h4>Anlegen Entwickler-Zugang</h4>
+					https://developer.amazon.com/de/
+					<div style="border:0px;height:500px;">
+							<img src="images/alexa_create_account_01.png" class="fragment current-visible" style="border:0px;margin-left:50px;"/>
+							<img src="images/alexa_create_account_02.png" class="fragment" style="border:0px;"/>
+							<img src="images/alexa_create_account_03.png" class="fragment" style="border:0px;"/>
+					</div>
+				</section>
+				<section>
 
 				</section>
 			</section>
